--- a/clean_data/clean_data_scarping.ipynb
+++ b/clean_data/clean_data_scarping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "a4d84e9e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "id": "145cc3ef",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "1c161710",
    "metadata": {},
    "outputs": [],
@@ -101,19 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "b2398769",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def add_time_range_and_filter(df, start_col=\"start\", end_col=\"end\", new_col=\"time_range\"):\n",
+    "def add_time_range_and_filter(df, start_col=\"start\", end_col=\"end\", duration_col=\"duration_minutes\"):\n",
     "    \"\"\"\n",
-    "    - Convert start/end columns to time\n",
-    "    - Log number of rows before and after filtering\n",
+    "    - Convert start/end columns to datetime\n",
     "    - Remove rows where end < start\n",
-    "    - Add new column representing the time range string\n",
+    "    - Add a column representing duration in minutes\n",
     "    \"\"\"\n",
     "    df = df.copy()  # avoid modifying original df\n",
     "\n",
@@ -124,33 +123,30 @@
     "    # Count rows before filtering\n",
     "    total_rows = len(df)\n",
     "\n",
-    "    # Identify rows to remove\n",
+    "    # Identify invalid rows\n",
     "    invalid_mask = df[\"_end_dt\"] < df[\"_start_dt\"]\n",
     "    invalid_rows = df[invalid_mask]\n",
     "\n",
     "    # Logging\n",
     "    print(\"===== Time Range Cleaning Report =====\")\n",
     "    print(f\"Total rows before cleaning : {total_rows}\")\n",
-    "    print(f\"Rows with end < start      : {len(invalid_rows)}\")\n",
+    "    print(f\"Rows removed (end < start) : {len(invalid_rows)}\")\n",
     "\n",
-    "    # Keep only valid rows\n",
+    "    # Keep valid rows only\n",
     "    df = df[~invalid_mask].copy()\n",
     "\n",
-    "    # Add new time_range column\n",
-    "    df[new_col] = (\n",
-    "        df[\"_start_dt\"].dt.strftime(\"%H:%M\")\n",
-    "        + \" - \"\n",
-    "        + df[\"_end_dt\"].dt.strftime(\"%H:%M\")\n",
-    "    )\n",
+    "    # Compute duration in minutes\n",
+    "    df[duration_col] = (df[\"_end_dt\"] - df[\"_start_dt\"]).dt.total_seconds() / 60.0\n",
+    "    df[range] = ( df[\"_start_dt\"].dt.strftime(\"%H:%M\") + \" - \" + df[\"_end_dt\"].dt.strftime(\"%H:%M\") )\n",
     "\n",
-    "    # Count after\n",
+    "    # Logging after cleaning\n",
     "    print(f\"Total rows after cleaning  : {len(df)}\")\n",
     "    print(\"======================================\\n\")\n",
     "\n",
-    "    # Clean helper columns\n",
+    "    # Drop helper columns\n",
     "    df = df.drop(columns=[\"_start_dt\", \"_end_dt\"])\n",
     "\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
@@ -163,41 +159,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "id": "966bc506",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_bangkok(df, province_col=\"province\", show_removed=False):\n",
+    "import pandas as pd\n",
+    "\n",
+    "def add_time_range_and_filter(\n",
+    "    df, \n",
+    "    start_col=\"start\", \n",
+    "    end_col=\"end\", \n",
+    "    range_col=\"time_range\", \n",
+    "    duration_col=\"duration_minutes\"\n",
+    "):\n",
     "    \"\"\"\n",
-    "    Keep only rows where province == 'Bangkok'.\n",
-    "    Logs before/after row counts.\n",
+    "    - Convert start/end columns to time\n",
+    "    - Remove rows where end < start\n",
+    "    - Add column showing time range string (start - end)\n",
+    "    - Add column showing duration in hours (float)\n",
     "    \"\"\"\n",
     "    df = df.copy()\n",
     "\n",
-    "    # Count before\n",
+    "    # Convert HH:MM string → datetime\n",
+    "    df[\"_start_dt\"] = pd.to_datetime(df[start_col], format=\"%H:%M\", errors=\"coerce\")\n",
+    "    df[\"_end_dt\"]   = pd.to_datetime(df[end_col],   format=\"%H:%M\", errors=\"coerce\")\n",
+    "\n",
+    "    # Count rows before cleaning\n",
     "    total_rows = len(df)\n",
     "\n",
-    "    # Mask for Bangkok\n",
-    "    mask = df[province_col].astype(str).str.strip().str.lower() == \"bangkok\"\n",
+    "    # Remove invalid rows (end < start)\n",
+    "    invalid_mask = df[\"_end_dt\"] < df[\"_start_dt\"]\n",
+    "    invalid_rows = df[invalid_mask]\n",
     "\n",
-    "    # Rows removed\n",
-    "    removed_rows = df[~mask]\n",
+    "    print(\"===== Time Range Cleaning Report =====\")\n",
+    "    print(f\"Total rows before cleaning : {total_rows}\")\n",
+    "    print(f\"Rows with end < start      : {len(invalid_rows)}\")\n",
     "\n",
-    "    # Logging\n",
-    "    print(\"===== Province Filter: Bangkok =====\")\n",
-    "    print(f\"Total rows before filtering : {total_rows}\")\n",
-    "    print(f\"Rows kept (Bangkok)         : {mask.sum()}\")\n",
-    "    print(f\"Rows removed                : {len(removed_rows)}\")\n",
+    "    # Filter valid rows\n",
+    "    df = df[~invalid_mask].copy()\n",
     "\n",
-    "    if show_removed and len(removed_rows) > 0:\n",
-    "        print(\"\\n--- Rows Removed ---\")\n",
-    "        print(removed_rows[[province_col]])\n",
+    "    # 1️⃣ Add new time range column (\"HH:MM - HH:MM\")\n",
+    "    df[range_col] = (\n",
+    "        df[\"_start_dt\"].dt.strftime(\"%H:%M\")\n",
+    "        + \" - \"\n",
+    "        + df[\"_end_dt\"].dt.strftime(\"%H:%M\")\n",
+    "    )\n",
     "\n",
-    "    print(\"====================================\\n\")\n",
+    "    # 2️⃣ Add duration (in hours)\n",
+    "    df[duration_col] = (df[\"_end_dt\"] - df[\"_start_dt\"]).dt.total_seconds() / 60.0\n",
     "\n",
-    "    # Return only Bangkok rows\n",
-    "    return df[mask].copy()\n"
+    "    print(f\"Total rows after cleaning  : {len(df)}\")\n",
+    "    print(\"======================================\\n\")\n",
+    "\n",
+    "    # Clean helper columns\n",
+    "    df = df.drop(columns=[\"_start_dt\", \"_end_dt\"])\n",
+    "\n",
+    "    return df\n"
    ]
   },
   {
@@ -210,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "id": "91851cc9",
    "metadata": {},
    "outputs": [],
@@ -225,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "1277075b",
    "metadata": {},
    "outputs": [
@@ -456,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "id": "4a930470",
    "metadata": {},
    "outputs": [
@@ -464,7 +482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 6,745 rows × 10 columns\n"
+      "Loaded 6,745 rows × 11 columns\n"
      ]
     },
     {
@@ -498,6 +516,7 @@
        "      <th>rain</th>\n",
        "      <th>wind_gust</th>\n",
        "      <th>time_range</th>\n",
+       "      <th>duration_minutes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -513,6 +532,7 @@
        "      <td>0.0</td>\n",
        "      <td>14.040000</td>\n",
        "      <td>08:30 - 13:30</td>\n",
+       "      <td>300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
@@ -526,6 +546,7 @@
        "      <td>0.0</td>\n",
        "      <td>14.040000</td>\n",
        "      <td>09:00 - 14:00</td>\n",
+       "      <td>300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
@@ -539,6 +560,7 @@
        "      <td>0.0</td>\n",
        "      <td>24.119999</td>\n",
        "      <td>09:00 - 13:00</td>\n",
+       "      <td>240.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
@@ -552,6 +574,7 @@
        "      <td>0.0</td>\n",
        "      <td>24.119999</td>\n",
        "      <td>08:30 - 13:30</td>\n",
+       "      <td>300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
@@ -565,6 +588,7 @@
        "      <td>0.0</td>\n",
        "      <td>19.800000</td>\n",
        "      <td>08:00 - 12:00</td>\n",
+       "      <td>240.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -578,12 +602,12 @@
        "41  2025-11-24      Monday  08:30  13:30       Lat Phrao  Bangkok  25.075998   \n",
        "42  2025-11-23      Sunday  08:00  12:00     Phra Nakhon  Bangkok  22.893500   \n",
        "\n",
-       "    rain  wind_gust     time_range  \n",
-       "34   0.0  14.040000  08:30 - 13:30  \n",
-       "35   0.0  14.040000  09:00 - 14:00  \n",
-       "38   0.0  24.119999  09:00 - 13:00  \n",
-       "41   0.0  24.119999  08:30 - 13:30  \n",
-       "42   0.0  19.800000  08:00 - 12:00  "
+       "    rain  wind_gust     time_range  duration_minutes  \n",
+       "34   0.0  14.040000  08:30 - 13:30             300.0  \n",
+       "35   0.0  14.040000  09:00 - 14:00             300.0  \n",
+       "38   0.0  24.119999  09:00 - 13:00             240.0  \n",
+       "41   0.0  24.119999  08:30 - 13:30             300.0  \n",
+       "42   0.0  19.800000  08:00 - 12:00             240.0  "
       ]
      },
      "metadata": {},
@@ -597,33 +621,35 @@
       "DataFrame info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 6745 entries, 34 to 11354\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   date         6745 non-null   object \n",
-      " 1   day_of_week  6745 non-null   object \n",
-      " 2   start        6745 non-null   object \n",
-      " 3   end          6745 non-null   object \n",
-      " 4   district     6745 non-null   object \n",
-      " 5   province     6745 non-null   object \n",
-      " 6   temp         6745 non-null   float64\n",
-      " 7   rain         6745 non-null   float64\n",
-      " 8   wind_gust    6745 non-null   float64\n",
-      " 9   time_range   6745 non-null   object \n",
-      "dtypes: float64(3), object(7)\n",
-      "memory usage: 579.6+ KB\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   date              6745 non-null   object \n",
+      " 1   day_of_week       6745 non-null   object \n",
+      " 2   start             6745 non-null   object \n",
+      " 3   end               6745 non-null   object \n",
+      " 4   district          6745 non-null   object \n",
+      " 5   province          6745 non-null   object \n",
+      " 6   temp              6745 non-null   float64\n",
+      " 7   rain              6745 non-null   float64\n",
+      " 8   wind_gust         6745 non-null   float64\n",
+      " 9   time_range        6745 non-null   object \n",
+      " 10  duration_minutes  6745 non-null   float64\n",
+      "dtypes: float64(4), object(7)\n",
+      "memory usage: 632.3+ KB\n",
       "\n",
       "Missing values per column:\n",
-      "date           0\n",
-      "day_of_week    0\n",
-      "start          0\n",
-      "end            0\n",
-      "district       0\n",
-      "province       0\n",
-      "temp           0\n",
-      "rain           0\n",
-      "wind_gust      0\n",
-      "time_range     0\n",
+      "date                0\n",
+      "day_of_week         0\n",
+      "start               0\n",
+      "end                 0\n",
+      "district            0\n",
+      "province            0\n",
+      "temp                0\n",
+      "rain                0\n",
+      "wind_gust           0\n",
+      "time_range          0\n",
+      "duration_minutes    0\n",
       "dtype: int64\n",
       "----------------------------------------\n"
      ]
@@ -635,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "id": "2bb2f737",
    "metadata": {},
    "outputs": [],
